# agentic-ai-systems-assignments

./: .gitignore  README.md
Task 01/: README.md  (+2 more)
Task 02/: README.md  SUBMISSION.md  Submission-Document.docx  pyproject.toml  מסמך הגשה.docx
Task 02/src/: app.py  config.py  main.py
Task 02/src/agents/: chat_agent.py  exchange_agent.py  math_agent.py  registry.py  router_agent.py  schemas.py  weather_agent.py
Task 02/src/bot_agents/: classifier_agent.py  exchange_agent.py  registry.py  router_agent.py  schemas.py  weather_agent.py
Task 02/src/config/: __init__.py  settings.py
Task 02/src/examples/: demo_run.py
Task 02/src/guardrails/: input_guardrails.py  llm_guardrails.py  output_guardrails.py
Task 02/src/logs/: latest.json  session_20260508_130450.json  session_20260509_191335.json  session_20260509_230247.json
Task 02/src/memory/: history.json  memory_manager.py
Task 02/src/prompts/: chat_prompt.txt  classifier_prompt.txt  examples.json  router_prompt.txt
Task 02/src/tests/: test_gradio_ui.py
Task 02/src/tools/: exchange_tool.py  math_tool.py  weather_tool.py
Task 02/src/utils/: logger.py
Task 03/: README.md  SUBMISSION.md  pyproject.toml  requirements.txt  תרגיל מספר 3.docx
Task 03/src/: app.py
Task 03/src/bot_agents/: chat_agent.py  math_agent.py  review_analyzer_agent.py  router_agent.py  schemas.py  self_correction.py
Task 03/src/guardrails/: output_guardrails.py
Task 03/src/logs/: session_20260508_124923.json  session_20260508_125549.json  session_20260508_130224.json  session_20260509_191901.json  session_20260527_174945.json  (+3 more)
(+10 files in other folders)
