[project]
name = "task-03"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "openai-agents>=0.0.17",
    "gradio>=5.0.0",
    "pydantic>=2.0.0",
    "requests>=2.30.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "playwright>=1.40.0",
]
